--- a/Frontend/assets/css/main.css
+++ b/Frontend/assets/css/main.css
@@ -4,6 +4,9 @@
 
 @layer components {
   .menu-bg {
-    @apply my-2 mx-2 py-7 px-10 shadow-lg hover:shadow-xl rounded-lg justify-between;
+    @apply my-2 mx-2 py-7 px-10 shadow-lg rounded-lg justify-between;
+  }
+  .menu-bg:hover {
+    @apply shadow-xl;
   }
 }
